# kleyklod

./: .env.example  .gitattributes  .gitignore  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  APPLY_MIGRATION.txt  Dockerfile  alembic.ini  generate_test_500.py  generate_test_pdf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_25_0001_initial_tables.py  2025_12_25_0002_add_user_photo_url_and_generation_fields.py  2025_12_25_0003_add_api_keys_table.py  2025_12_28_0004_add_feedback_tables.py  2025_12_28_0005_add_telegram_id_hash.py  2025_12_29_0006_add_trial_ends_at.py  2025_12_29_0007_add_user_label_preferences.py  2025_12_31_0008_add_professional_template_fields.py  2026_01_03_0009_add_code_usages_table.py  2026_01_05_0010_add_product_cards_table.py  2026_01_05_0011_add_custom_lines_to_users.py  2026_01_06_0012_add_product_card_fields.py  2026_01_08_0013_add_address_to_product_cards.py  2026_01_08_0014_add_has_seen_cards_hint_to_users.py  2026_01_09_0520-4ba2d2f1c10b_add_field_priority_to_users.py  2026_01_10_0015_add_tasks_table.py  2026_01_11_0006_add_vk_user_id.py  2026_01_11_0016_add_vk_user_id.py  2026_01_18_0017_add_last_label_number.py  2026_01_21_0822-0018_add_marketplace_keys_table.py  2026_01_26_0019_add_label_balance_system.py  2026_01_30_0020_add_articles_table.py
backend/app/: __init__.py  celery_app.py  config.py  logging_config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  admin.py  articles.py  auth.py  config.py  demo.py  feedback.py  generations.py  health.py  integrations.py  keys.py  labels.py  payments.py  products.py  support.py  tasks.py  users.py
backend/app/db/: database.py  models.py
backend/app/models/: __init__.py  label_types.py  schemas.py
backend/app/repositories/: __init__.py  article_repository.py  generation_repository.py  marketplace_key_repository.py  payment_repository.py  product_repo.py  task_repository.py  usage_repository.py  user_repository.py
backend/app/schemas/: __init__.py  article.py
backend/app/services/: api_keys.py  auth.py  barcode_generator.py  code_history.py  csv_parser.py  datamatrix.py  error_messages.py  excel_parser.py  file_storage.py  indexnow.py  label_balance.py  label_generator.py  label_layout_generator.py  layout_preflight.py  merger.py  parse_cache.py  pdf_parser.py  preflight.py  rate_limiter.py  vk_auth.py  yookassa_service.py
backend/app/services/marketplace_api/: __init__.py  wildberries.py
backend/app/tasks/: __init__.py  cleanup.py  generate_labels.py  populate_telegram_id_hash.py
backend/app/utils/: encryption.py
backend/scripts/: migrate_articles.py  migrate_pro_users.py
backend/tests/: test_api_labels.py  test_auth_vk.py  test_autosave.py  test_gtin_matching.py  test_label_generator.py  test_pdf_parser.py
backend/tests/api/: test_articles.py  test_labels_balance.py  test_labels_chz.py  test_labels_wb.py  test_payment_credit.py
backend/tests/repositories/: test_usage_repository.py
backend/tests/services/: test_csv_parser.py  test_label_balance.py  test_label_generator_chz.py  test_label_generator_wb.py
bot/: .dockerignore  .env.example  Dockerfile  pyproject.toml  test_payment_import.py
bot/bot/: __init__.py  config.py  logging_config.py  main.py
bot/bot/assets/: example.xlsx
bot/bot/handlers/: __init__.py  apikey.py  chz_only.py  generate.py  history.py  payment.py  products.py  profile.py  start.py  support.py  wb_only.py
bot/bot/keyboards/: __init__.py  inline.py  reply.py
bot/bot/middlewares/: __init__.py  auth.py  logging.py  rate_limit.py
bot/bot/states/: __init__.py  generate.py
bot/bot/utils/: __init__.py  api_client.py  redis_settings.py
docs/plans/: 2025-12-25-frontend-integration-design.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
frontend/public/: indexnow-key.txt  manifest.json
frontend/public/examples/: codes-example.csv  label-template.xlsx  vk-barcodes-example.xlsx  wb-barcodes-example.xlsx
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/api/feedback/: route.ts
frontend/src/app/app/: layout.tsx  page.tsx
frontend/src/app/articles/: layout.tsx  page.tsx
frontend/src/app/chz-labels/: page.tsx
frontend/src/app/faq/: layout.tsx  page.tsx
frontend/src/app/login/: layout.tsx  page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/app/vk/: layout.tsx  page.tsx
frontend/src/app/wb-labels/: page.tsx
frontend/src/components/: conversion-prompts.tsx  feedback-modal.tsx  telegram-login.tsx  vk-login-button.tsx
frontend/src/components/analytics/: landing-tracker.tsx
frontend/src/components/app/: api-key-section.tsx  header.tsx  sidebar.tsx  stat-card.tsx
frontend/src/components/articles/: article-content.tsx
frontend/src/components/landing/: demo-animation.tsx  demo-assets.ts  demo-dropzone.tsx  index.ts
frontend/src/components/sections/: comparison.tsx  faq.tsx  features-ticker.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  pricing.tsx  problems.tsx  roadmap.tsx
frontend/src/components/support/: index.ts  support-bubble.tsx  support-chat.tsx  support-message.tsx
frontend/src/components/ui/: avatar.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  toast.tsx
frontend/src/components/vk/: subscription-banner.tsx  vk-generate-page.tsx
frontend/src/contexts/: auth-context.tsx  vk-auth-context.tsx
frontend/src/hooks/: index.ts  use-auth.ts  use-long-press.ts  use-task-polling.ts
frontend/src/lib/: analytics.ts  api.ts  auth.ts  label-config.ts  label-field-config.ts  product-search.ts  render-label.ts  server-auth.ts  vk-bridge.ts
frontend/src/types/: api.ts  auth.ts
nginx/: nginx.conf
scripts/: article_template.json  articles_api.py
vk_bot/: Dockerfile  main.py
(+88 files in other folders)
