[project]
name = "kleykod-bot"
version = "0.1.0"
description = "KleyKod Telegram Bot - генератор этикеток WB + Честный Знак"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "KleyKod Team" }
]

dependencies = [
    # Telegram бот
    "aiogram>=3.15.0",

    # Redis для FSM
    "redis>=5.2.0",

    # HTTP клиент для API
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",

    # Настройки
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",

    # Мониторинг ошибок (GlitchTip/Sentry)
    "sentry-sdk>=2.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
